fix wrapping of interpreter

--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,7 @@ code {
 #containerProgressbars {
     margin-left: 20px;
     display: flex;
+    flex-wrap: wrap;
     height: 178px;
 }
 
